--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,26 +1,29 @@
 <mat-card>
-  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
     <mat-form-field>
       <input
         matInput
         type="text"
         name="title"
-        ngModel
+        [ngModel]="post?.title"
         required
-        placeholder="Title"
+        minlength="3"
+        placeholder="Post Title"
         #title="ngModel">
         <mat-error *ngIf="title.invalid">Please enter a post title.</mat-error>
     </mat-form-field>
     <mat-form-field>
       <textarea
-        matInput rows="4"
+        matInput
+        rows="4"
         name="content"
-        ngModel
+        [ngModel]="post?.content"
         required
-        placeholder="Content"
+        placeholder="Post Content"
         #content="ngModel">
       </textarea>
-      <mat-error *ngIf="content.invalid">Please enter a post content.</mat-error>
+      <mat-error *ngIf="content?.invalid">Please enter a post content.</mat-error>
     </mat-form-field>
     <button
       mat-raised-button
